On-Pre/hp-infra/01_cicd/sonarqube/3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: cicd
  labels:
    app: sonarqube
spec:
  # [수정] 내부 통신용으로 변경
  type: ClusterIP 
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
      name: http
