On-Pre/hp-infra/01_cicd/sonarqube/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: cicd
  annotations:
    ingressClassName: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # [나중에 입력] AWS ACM 인증서 ARN
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:XXXXXXXXXXXX:certificate/XXXXXX"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: sonarqube.your-domain.com # [나중에 입력] 실제 도메인
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
